Address review: bounded fan-out, client chunking, null-safe batch errors
- Cap the report fan-out to a fixed pool (min(n, 10)) instead of unbounded
  virtual threads, so one batch can't saturate the ES client connection pool.
- Fall back to the exception class name when getMessage() is null, so a failed
  batch item always carries a non-null error string.
- Chunk the client-side batcher into <=50-item POSTs so a large render tick can
  never trip the server's batch-size cap (which would 400 and blank everything).
- Guard captureReports' JSON.parse in the Playwright util, matching the sibling
  isDashboardReportBatchResponse helper.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>